knowledge hub system formatted and content

--- a/content/blog/job-market-trends-2025.mdx
+++ b/content/blog/job-market-trends-2025.mdx
@@ -2,11 +2,11 @@
 title: Job Market Trends for 2025
 description: Explore the emerging trends in the job market and how to position yourself for success
 date: 2025-06-25
-author: Alex Johnson
+author: Mike H
 tags: [trends, career, job-market]
+previous:
+next:
 ---
-
-# Job Market Trends for 2025
 
 The job market continues to evolve rapidly as we move through 2025. Understanding these shifts is crucial for job seekers looking to stay competitive and find the best opportunities. Here's our analysis of the current landscape and what you can expect in the coming months.
 
